<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/about_page"
        android:icon="@drawable/ic_about"
        android:title="@string/about_page"
        app:showAsAction="ifRoom"/>

</menu>