<resources>
    <string name="app_name">Cheat</string>
    <string name="connected_status">Connected</string>
    <string name="disconnected_status">Disconnected</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="nearby_devices">Nearby Devices</string>
    <string name="text_entry_hint">Message</string>
    <string name="chat_partner">Chat Partner</string>
    <string name="edit_timestamp">(&#9999; %1$s)</string>
    <string name="partner_connected">Chat partner joined.</string>
    <string name="partner_disconnected">Chat partner left.</string>
    <string name="disconnect_message_title">Exit</string>
    <string name="disconnect_message_message">Do you want to leave the chat?</string>
    <string name="dialog_option_yes">YES</string>
    <string name="dialog_option_no">NO</string>
    <string name="chat_options_title">Options</string>
    <string name="chat_options_neg">Cancel</string>
    <string name="sending_message_disconnected">Can\'t sent message while disconnected.</string>
    <string name="no_bluetooth">No Bluetooth available, using Mock</string>
    <string name="connection_failed">Connecting failed</string>
    <string name="bluetooth_enabled">Bluetooth enabled</string>
    <string name="bluetooth_disabled">Bluetooth disabled</string>
    <string name="bluetooth_enable_cancelled">Bluetooth enabling cancelled</string>
    <string name="connect_to_failed">Connecting to device %1$s failed!</string>
    <string name="send_image_dialog_title">Send Image</string>
    <string name="send_image_dialog">Do you want to send this image?</string>
    <string name="send_image">Send Images</string>
    <string name="send_button">Send</string>
    <string name="choose_image_src">Select image source</string>
    <string name="image_creation_failed">Creating temporary image file failed</string>
    <string name="send_image_option_gallery">Gallery</string>
    <string name="send_image_option_camera">Camera</string>
    <string name="about_page">About Page</string>

    <string name="reference1"><div><a href="https://www.vecteezy.com/free-vector/dark-pattern">Dark Pattern Vectors by Vecteezy</a></div></string>
    <string name="reference2"><div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></string>
    <string name="reference3"><div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></string>
    <string name="reference4"><div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></string>

    <string name="full_image_description">Maximized Image</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

    <string name="version">Version 2.0</string>

</resources>
