<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/text_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_text_small"
                android:padding="@dimen/padding_send_btn"
                android:paddingStart="@dimen/padding_send_btn"
                android:paddingEnd="@dimen/padding_send_btn_end"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/hintTextColor"
                android:background="@drawable/rounded_background_other"
                android:hint="@string/text_entry_hint"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="6"/>

            <ImageButton
                android:id="@+id/image_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="15dp"
                android:contentDescription="@string/send_image"
                android:src="@drawable/ic_image"
                android:tint="@color/primaryTextColor"
                android:backgroundTint="@color/transparent"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_send_btn"
            android:minWidth="@dimen/size_send_btn"
            android:minHeight="@dimen/size_send_btn"
            android:layout_marginBottom="@dimen/margin_send_btn"
            android:layout_marginEnd="@dimen/margin_field_small"
            android:layout_gravity="bottom"
            android:textColor="@color/primaryTextColor"
            android:background="@drawable/send_btn"
            android:text="@string/send_button"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>